objects/Iteration_Node__c.object
<CustomObject>
    <fields>
        <fullName>Information__c</fullName>
        <label>Information</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Iteration__c</fullName>
        <label>Iteration</label>
        <referenceTo>Iteration__c</referenceTo>
        <relationshipLabel>Iteration Nodes</relationshipLabel>
        <relationshipName>Iteration_Nodes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Node_Status__c</fullName>
        <label>Node Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Play</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustained</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dead</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Node__c</fullName>
        <label>Node</label>
        <referenceTo>Node__c</referenceTo>
        <relationshipLabel>Iterations</relationshipLabel>
        <relationshipName>Iteration_Nodes</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Iteration Node</label>
    <nameField>
        <displayFormat>IN-{000000}</displayFormat>
        <label>Iteration Node Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Iteration Nodes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>